# project-k

./: .dockerignore  .gitignore  Dockerfile  HELLO.md  debug.txt  supervisord.conf
collections/: README.md  pyproject.toml
collections/src/kapy_collections/starters/: __init__.py
collections/src/kapy_collections/starters/telegram/: __init__.py  __main__.py  api.py  cli.py  compact.py  events.py  history.py  runner.py  tz.py
collections/src/kapy_collections/starters/telegram_mq/: runner.py
core/: pyproject.toml
core/demo/io_helpers/: shell_demo.py
core/src/k/: config.py
core/src/k/agent/: channels.py  init_agent.py  main.py  text_tool_agent.py  tg_starter.py
core/src/k/agent/core/: __init__.py  agent.py  entities.py  media_tools.py  prompts.py  run.py  shell_tools.py  skills_md.py  skills_uri.py  types.py
core/src/k/agent/memory/: compactor.py  entities.py  folder.py  folder_migrate_kind_to_channel.py  paths.py  simple.py  store.py  utils.py
core/src/k/io_helpers/: shell.py
core/src/k/runner_helpers/: basic_os.py
core/src/k/starters/: __init__.py  telegram.py
core/src/k/starters/telegram/: __init__.py  cli.py  compact.py  (+2 more)
core/tests/: test_agent_mydeps_close.py  test_agent_run_compaction_pipeline.py  test_agent_tool_modelretry_guard.py  test_bash_output_token_limit.py  test_bash_tool_countdown.py  test_channels.py  test_compactor_text_only_tool_returns.py  test_concat_skills_prompt_channel_injection.py  test_concat_skills_prompt_kind_injection.py  test_config.py  test_edit_file_skill.py  test_event_channel_model.py  test_finish_action_validation.py  test_folder_memory_store.py  test_folder_migrate_kind_to_channel.py  test_general_prompt.py  test_generate_nai_chat_prompt_overrides.py  test_jsonl_memory_record_store.py  test_memory_compactor_prompt.py  test_memory_paths.py  test_memory_record_dump_order.py  test_memory_record_id.py  test_persona_prompt_override.py  test_preference_prompt_loading.py  test_read_media_tool.py  test_shell_session_autoclose.py  test_shell_session_manager.py  test_telegram_context_stage_a.py  test_tg_starter_async_api.py  test_tg_starter_batching.py  test_tg_starter_dedupe.py  test_tg_starter_event.py  test_tg_starter_filters.py  test_tg_starter_history.py  test_tg_starter_runner.py  test_web_fetch_skill.py  test_web_search_skill.py
(+59 files in other folders)
